# FastAPI_Projects

./: pyproject.toml
Adventure Game API/: main.py
Recipe_management/: main.py  model.py  recipes.json  routes.py  services.py
Vehicle_inventory/: .coverage  README.md  main.py  models.py  routes.py  test_main.py  vehicle.json
event_booking/: .coverage  README.md  main.py  model.py  routes.py  services.py  test_main.py
flight_booking/: README.md  main.py  models.py  routes.py  services.py  test.py  test_main.py
process_payment/: README.md  main.py  model.py  test_main.py
product Search/: .coverage  README.md  main.py  product.json  test_main.py
product Search/controler/: read_product.py
product Search/routes/: index.py
user_registration/: README.md  hashing.py  main.py  model.py  test_main.py
