[tool.poetry]
name = "fastapi-projects"
version = "0.1.0"
description = "FastAPI Projects"
authors = ["David Nwolu"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.0"
uvicorn = "^0.29.0"
pydantic = {extras = ["email"], version = "^2.6.4"}
pytest = "^8.1.1"
httpx = "^0.27.0"
pydantic-extra-types = "^2.6.0"
phonenumbers = "^8.13.33"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
